# mkdocs-api-autonav

./: .copier-answers.yml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  plugin-extension-spec.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
src/mkdocs_api_autonav/: __init__.py  discovery.py  plugin.py
tests/: test_c_discovery.py  test_mkdocs_api_autonav.py  test_nav_title_namespace.py
tests/fixtures/c_project/: mkdocs.yml
tests/fixtures/c_project/docs/: index.md
tests/fixtures/c_project/src/arv/: arv.c  arv.h  device.c  device.h
tests/fixtures/repo1/: mkdocs.yml  pyproject.toml
tests/fixtures/repo1/docs/: index.md
tests/fixtures/repo1/src/my_library/: __init__.py
tests/fixtures/repo1/src/my_library/_private_submod/: mod.py
tests/fixtures/repo1/src/my_library/submod/: __init__.py  sub_submod.py
